--- a/Gestione Ricevimenti/Gestione Ricevimenti/InfoPage.xaml
+++ b/Gestione Ricevimenti/Gestione Ricevimenti/InfoPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Gestione_Ricevimenti.InfoPage"
-             Title="Gestione Ricevimenti" >
+             Title="Gestione Ricevimenti" 
+             NavigationPage.HasBackButton="False">
              
     <StackLayout Padding = "7,7,7,3" >
         
